modified:   main.ipynb

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense, LSTM\n",
     "from keras.models import Sequential\n",
@@ -428,12 +431,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Sequential()"
+    "df['time'] = pd.to_datetime(df['time'])\n",
+    "df['time'] = (df['time'] - pd.Timestamp(\"1970-01-01\")) // pd.Timedelta('1s')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df[['time', 'CPU', 'memory', 'cpu_temp']].values\n",
+    "y = df['output'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = MinMaxScaler()\n",
+    "X = scaler.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)#, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = X_train.reshape(X_train.shape[0], 1, X_train.shape[1])\n",
+    "X_test = X_test.reshape(X_test.shape[0], 1, X_test.shape[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Sequential()\n",
+    "model.add(LSTM(units=50, activation='relu', input_shape=(1, X_train.shape[2])))\n",
+    "model.add(Dense(1, activation='sigmoid'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "209/209 [==============================] - 1s 2ms/step - loss: 0.3169 - accuracy: 0.9738 - val_loss: 0.0708 - val_accuracy: 0.9964\n",
+      "Epoch 2/10\n",
+      "209/209 [==============================] - 0s 1ms/step - loss: 0.0356 - accuracy: 0.9976 - val_loss: 0.0379 - val_accuracy: 0.9964\n",
+      "Epoch 3/10\n",
+      "209/209 [==============================] - 0s 1ms/step - loss: 0.0224 - accuracy: 0.9976 - val_loss: 0.0353 - val_accuracy: 0.9964\n",
+      "Epoch 4/10\n",
+      "209/209 [==============================] - 0s 1ms/step - loss: 0.0203 - accuracy: 0.9976 - val_loss: 0.0347 - val_accuracy: 0.9964\n",
+      "Epoch 5/10\n",
+      "209/209 [==============================] - 0s 1ms/step - loss: 0.0194 - accuracy: 0.9976 - val_loss: 0.0341 - val_accuracy: 0.9964\n",
+      "Epoch 6/10\n",
+      "209/209 [==============================] - 0s 1ms/step - loss: 0.0189 - accuracy: 0.9976 - val_loss: 0.0334 - val_accuracy: 0.9964\n",
+      "Epoch 7/10\n",
+      "209/209 [==============================] - 0s 1ms/step - loss: 0.0184 - accuracy: 0.9976 - val_loss: 0.0326 - val_accuracy: 0.9964\n",
+      "Epoch 8/10\n",
+      "209/209 [==============================] - 0s 1ms/step - loss: 0.0179 - accuracy: 0.9976 - val_loss: 0.0313 - val_accuracy: 0.9964\n",
+      "Epoch 9/10\n",
+      "209/209 [==============================] - 0s 1ms/step - loss: 0.0174 - accuracy: 0.9976 - val_loss: 0.0305 - val_accuracy: 0.9964\n",
+      "Epoch 10/10\n",
+      "209/209 [==============================] - 0s 1ms/step - loss: 0.0170 - accuracy: 0.9976 - val_loss: 0.0291 - val_accuracy: 0.9964\n"
+     ]
+    }
+   ],
+   "source": [
+    "history = model.fit(X_train, y_train, epochs=10, batch_size=32, validation_data=(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53/53 [==============================] - 0s 690us/step - loss: 0.0291 - accuracy: 0.9964\n",
+      "Test loss: 0.02911350317299366, Test accuracy: 0.9964093565940857\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss, accuracy = model.evaluate(X_test, y_test)\n",
+    "print(f'Test loss: {loss}, Test accuracy: {accuracy}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
